# bio_embeddings

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  app.py  backend.sh  cache  celery.sh  environment.yml  extractor.py  genindex.html  index.html  notebooks.html  py-modindex.html  pyproject.toml  pytest.ini  request_models.py  requirements.txt  search.html  searchindex.js  setup.py  tasks.py  tox.ini
_modules/: index.html
_sources/notebooks/: goPredSim.ipynb.txt
api/: bio_embeddings.embed.html  bio_embeddings.extract.html  bio_embeddings.project.html  bio_embeddings.utilities.html  bio_embeddings.visualize.html  index.html
app/: celery_worker.py  main.py
app/endpoints/: __init__.py  embeddings.py  features.py  request_models.py
app/machine_learning/: __init__.py  embeddings.py  extractor.py  features.py  michael.py
app/tasks/: __init__.py
bio_embeddings/: EmbedderInterface.py  __init__.py  bio_embeddings_schema.json  embeddings.py  models.py
bio_embeddings/align/: __init__.py  deepblast.py  mmseqs2.py  pipeline.py
bio_embeddings/embed/: EmbedderInterface.py  __init__.py  albert_embedder.py  bepler_embedder.py  bert_base_embedder.py  bert_embedder.py  cpcprot_embedder.py  embedder_interface.py  embedder_interfaces.py  esm_embedder.py  fasttext_embedder.py  glove_embedder.py  helper.py  one_hot_encoding_embedder.py  pipeline.py  plus_rnn_embedder.py  protrans_albert_bfd_embedder.py  prottrans_albert_bfd_embedder.py  prottrans_base_embedder.py  prottrans_bert_base_embedder.py  prottrans_bert_bfd_embedder.py  prottrans_embedder.py  prottrans_t5_bfd_embedder.py  prottrans_t5_embedder.py  prottrans_xlnet_uniref100_embedder.py  seqvec_embedder.py  short_albert_embedder.py  unirep_embedder.py  word2vec_embedder.py  xlnet_embedder.py
bio_embeddings/embedders/: EmbedderInterface.py  __init__.py  defaults.py
bio_embeddings/extract/: __init__.py  pipeline.py  unsupervised_utilities.py
bio_embeddings/extract_features/: FeatureExtractorInterface.py  __init__.py
bio_embeddings/feature_extractors/: FeatureExtractorInterface.py
bio_embeddings/features/: Disorder.py  FeatureInterface.py  FeaturesCollection.py  Location.py  Membrane.py  SecondaryStructure.py  __init__.py
bio_embeddings/model/: secstruct_checkpoint.pt
bio_embeddings/mutagenesis/: __init__.py  constants.py  pipeline.py  protbert_bfd.py
bio_embeddings/mutagenesis_visualize/: __init__.py  pipeline.py
bio_embeddings/project/: __init__.py  pb_tucker.py  pipeline.py  tsne.py  umap.py
bio_embeddings/utilities/: __init__.py  backports.py  bio_embeddings  bio_embeddings.py  bisect_embedder_ram.py  cli.py  config.py  defaults.py  defaults.yml  exceptions.py  get_model_size.py  helpers.py  logging.py  model_size_impl.py  model_size_main.py  pipeline.py  remote_file_retriever.py  system.py
develop/: .buildinfo  genindex.html  index.html  notebooks.html  objects.inv  parameter_blueprints.html  py-modindex.html  search.html  searchindex.js
develop/api/: index.html  (+7 more)
docs/: conf.py  index.md
endpoints/: embeddings.py
examples/: README.md  parameters_blueprint.yml
machine_learning/: extractor.py
notebooks/: Elmo_Weight_Visualization.ipynb  README.html  README.md  deeploc_machine_learning.html  deeploc_machine_learning.ipynb  deeploc_visualizations.html  deeploc_visualizations.ipynb  elmo_weight_visualization.ipynb  embed_custom_sequence.html  embed_custom_sequence.ipynb  embed_fasta_sequences.html  embed_fasta_sequences.ipynb  embed_user_sequence.ipynb  extract_localization_from_ProtBert_using_light_attention.ipynb  extract_supervised_from_seqvec.html  extract_supervised_from_seqvec.ipynb  get_embeddings.ipynb  goPredSim.html  goPredSim.ipynb  open_embedding_file.html  open_embedding_file.ipynb  pairwise_distances_and_nearest_neighbours.html  pairwise_distances_and_nearest_neighbours.ipynb  per_amino_acid_embedding_visualization.html  per_amino_acid_embedding_visualization.ipynb  project_and_visualize_annotations_from_embeddings.ipynb  project_embeddings.ipynb  project_visualize_custom_embedings.html  project_visualize_custom_embedings.ipynb  project_visualize_pipeline_embeddings.html  project_visualize_pipeline_embeddings.ipynb  reduced_embeddings_file.h5  reindex_h5_file.html  reindex_h5_file.ipynb  remove_identifiers_from_annotation_file.html  remove_identifiers_from_annotation_file.ipynb  tiny_sampled.fasta
parameters_examples/: example_config.yml
test-data/: embed_config_mixup.yml  embeddings.npz  esm1v_missing_ensemble_id.yml  illegal_amino_acids.fasta  mapping_file.csv  remapped_sequences_file.fasta  seqwence-protein.fasta  subcellular_location_new_hard_set.fasta  test_notebooks.py  titin_twice.fasta  transferred_annotations_file.csv  unparsable.fasta
tests/: test_annotation_extractor.py  test_bindEmbed21DL.py  test_bindEmbed21HBI.py  test_bindPredictDL21.py  test_bio_embeddings_simple.py  test_conservation.py  test_deepblast.py  test_embed_pipeline.py  test_embedder.py  test_embedder_embedding.py  test_embedder_other.py  test_fasta_processing.py  test_hypothesis_bio.py  test_mmseqs2.py  test_mutagenesis.py  test_pipeline_global.py  test_seqvec_fallbacks.py  test_seqvec_pipeline.py  test_simple_remapping.py  test_subcellular.py  test_webserver.py
v0.1.5/: genindex.html  notebooks.html
v0.1.5-beta.1/: notebooks.html  search.html
v0.1.6/: CNAME  index.html  search.html
v0.1.7/: index.html  objects.inv  py-modindex.html  searchindex.js
v0.2.0/: genindex.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.2.1/: index.html  parameter_blueprints.html  py-modindex.html  searchindex.js
v0.2.2/: genindex.html  index.html  parameter_blueprints.html  search.html
v0.2.3/: genindex.html  objects.inv  parameter_blueprints.html  searchindex.js
webserver/: Dockerfile.webserver  Dockerfile.worker  README.md  Readme.md  backend.py  backend_configuration.yml  celery_worker.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  requirements.txt  test_backend.sh  test_celery.sh  wsgi.py
(+592 files in other folders)
